Fri Feb 21 17:19:27 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* eval.c (rb_f_require): do not need to abort if a DLEXT file
	  is not found.

Thu Feb 20 23:11:42 2003  Akinori MUSHA  <knu@iDaemons.org>

	* mdoc2man.rb: New file.  A mdoc to man converter ported from
	  Perl. [merged from 1.8]

	* configure.in (MANTYPE): Detect if the system's nroff(1) groks
	  mdoc.  Provide a new option --with-mantype={doc|man} in case the
	  check does not work as expected. [merged from 1.8]

	* Makefile.in (MANTYPE): Define MANTYPE and pass it to
	  instruby.rb. [merged from 1.8]

	* instruby.rb: Convert mdoc manpages to man for systems which
	  nroff(1) does not grok mdoc. [merged from 1.8]

Tue Feb 18 21:39:27 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_to_io): should prefetch argv.

Fri Feb 14 14:25:24 2003  akira yamada  <akira@arika.org>

	* lib/uri/generic.rb, lib/uri/ldap.rb, lib/uri/mailto.ldap: all foo=()
	  returns arguments passed by caller.

	* lib/uri/generic.rb (Generic#to_str, Generic#to_s): removed to_str.
	  Suggested by Tanaka Akira <akr@m17n.org> at [ruby-dev:19475].

	* lib/uri/generic.rb (Generic#==): should not generate an URI object
	  from argument. Suggested by Tanaka Akira <akr@m17n.org> at
	  [ruby-dev:19475].

Thu Feb 13 11:54:50 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* ruby.c (ruby_init_loadpath): ensures buffer terminated
	  before use strncpy().

	* ruby.c (proc_options): avoid SEGV at -S with no arguments.
	  script argument is in effect only when -e is not given.
	  (ruby-bugs-ja:PR#391)

Sat Feb  8 04:04:13 2003  Akinori MUSHA  <knu@iDaemons.org>

	* lib/irb/context.rb, lib/irb/multi-irb.rb, lib/irb/workspace.rb,
	  lib/irb/lc/error.rb, lib/irb/lc/help-message,
	  lib/irb/lc/ja/error.rb, lib/shell/command-processor.rb,
	  lib/shell/error.rb, lib/shell/filter.rb: Fix typos and
	  grammos. [approved by: keiju]

>>>>>>> 1.285.2.583
Mon Feb  3 23:46:48 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>
